# StafIT

./: .gitignore  README.md  pyproject.toml
stafit/: __main__.py  application.py  arguments.py  domain.py  readers.py  rendering.py
stafit/reports/: __init__.py  average_gdp.py  base.py  registry.py
tests/: test_application.py  test_average_gdp_report.py  test_readers.py  test_rendering.py
